feat: add docker and add userslogs in csv
